config/podzone-kibaba-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress 
metadata:
  name: podzone-kibana-ingress
  namespace: kube-system
  annotations:
    cert-manager.io/cluster-issuer: lets-encrypt
spec:
  ingressClassName: podzone-ingress-class
  tls:
  - hosts:
    - kibana.southern.podzone.net
    secretName: kibana-cert
  rules:
  - host: kibana.southern.podzone.net
    http:
      paths:
      - backend:
          service:
            name: kibana-logging
            port:
              number: 5601
        path: /
        pathType: Prefix
